syntax = "proto3";
option java_package = "models.proto.record";
option java_generate_equals_and_hash = true;

message RecordMeta {
  string key = 1;
  string topic = 2;
  int64 offset = 3;
}

