syntax = "proto3";
option java_package = "stream.models.proto.meta";
option java_generate_equals_and_hash = true;

message Topic {
  string topicName = 1;
  map<int64,Partition> partitions = 2;
}

message Partition {
  int64 id = 1;
  string topic = 2;
}
